adding files for home page

--- a/src/index.html
+++ b/src/index.html
@@ -13,17 +13,11 @@
     <link href="assets/libraries/bootstrap-select/bootstrap-select.min.css" rel="stylesheet" type="text/css">
     <link href="assets/libraries/bootstrap-fileinput/fileinput.min.css" rel="stylesheet" type="text/css">
     <link href="assets/css/superlist.css" rel="stylesheet" type="text/css">
-
     <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.png">
-
-    <title>Superlist</title>
+    <title>EVOSE</title>
 </head>
-
-
 <body>
-
     <div class="page-wrapper">
-
         <header class="header header-transparent">
             <div class="header-wrapper">
                 <div class="container">
@@ -31,51 +25,24 @@
                         <div class="header-logo">
                             <a href="index.html">
                                 <img src="assets/img/logo-white.png" alt="Logo">
-                                <span>Superlist</span>
+                                <span>EVOSE</span>
                             </a>
                         </div>
                         <!-- /.header-logo -->
-
                         <div class="header-content">
                             <div class="header-bottom">                                
                                 <!-- /.header-action -->
-
                                 <ul class="header-nav-primary nav nav-pills collapse navbar-collapse">
                                     <li class="active">
-                                        <a href="#">Home <i class="fa fa-chevron-down"></i></a>
-
-                                        <ul class="sub-menu">
-                                            <li><a href="index.html">Home</a></li>
-                                        </ul>
-                                    </li>
-
-                                    <li>
-                                        <a href="#">Listing <i class="fa fa-chevron-down"></i></a>
-                                        <ul class="sub-menu">
-                                            <li><a href="listing-row.html">Row</a></li>
-                                            <li><a href="listing-row-sidebar.html">Row Sidebar</a></li>
-                                        </ul>
-                                    </li>
-
-                                    <li>
-                                        <a href="#">Blog <i class="fa fa-chevron-down"></i></a>
-
-                                        <ul class="sub-menu">
-                                            <li><a href="error-404.html">Standard Right Sidebar</a></li>
-                                            <li><a href="error-404.html">Standard Left Sidebar</a></li>
-                                            <li><a href="error-404.html">Boxed Style</a></li>
-                                            <li><a href="error-404.html">Condensed Style</a></li>
-                                            <li><a href="error-404.html">Detail Fullwidth</a></li>
-                                        </ul>
+                                        <a href="index.html">Home</a>
                                     </li>
                                     <li>
-                                        <a href="#">Contact <i class="fa fa-chevron-down"></i></a>
-                                        <ul class="sub-menu">
-                                            <li><a href="contact-2.html">Contact v2</a></li>
-                                        </ul>
+                                        <a href="error-404.html">Blog</a>                                        
+                                    </li>
+                                    <li>
+                                        <a href="contact-2.html">Contact</a>
                                     </li>
                                 </ul>
-
                             </div>
                             <!-- /.header-bottom -->
                         </div>
@@ -89,32 +56,25 @@
         </header>
         <!-- /.header -->
 
-
-
-
         <div class="main">
             <div class="main-inner">
                 <div class="content">
                     <div class="mt-140">
-                        <div class="hero-video">
-                            <video preload="metadata" autoplay="" muted="" loop="">
-                                <source src="http://preview.byaviators.com/template/superlist/assets/img/tmp/video.mp4" type="video/mp4">
-                            </video>
-
-                            <div class="video-overlay"></div>
-
+                        <div class="hero-video" style="height:105vh;">             
+                            <div class="home-bg"></div>
                             <div class="container">
                                 <div class="row">
                                     <div class="col-sm-8 col-sm-offset-2 col-xs-12 col-xs-offset-0">
-                                        <h1>Directory Template</h1>
-                                        <p>Create your own directory website by using Superlist HTML template
-                                            <br> incorporating all features of modern directory website.</p>
-
+                                        <h1>Search Schools</h1>
+                                        <p>Home is the first school of every child, Lets find the second ...</p>
                                         <div class="input-group">
-                                            <input type="text" class="form-control" placeholder="Search for event, hotel, restaurant, job ... ">
+                                            <input type="text" class="form-control" placeholder="Enter area or school name...">
                                             <span class="input-group-btn">
-                        <button class="btn btn-primary" type="button">Search</button>
-                    </span>
+                                                <button class="btn btn-primary" 
+                                                        onclick="location.href = 'listing-row-sidebar.html';" 
+                                                        type="button">Search
+                                                </button>
+                                            </span>
                                         </div>
                                         <!-- /.input-group -->
                                     </div>
@@ -125,11 +85,7 @@
                             <!-- /.container -->
                         </div>
                         <!-- /.hero-video -->
-
                     </div>
-
-
-
                 </div>
                 <!-- /.content -->
             </div>
@@ -142,18 +98,19 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-4">
-                            <h2>About Superlist</h2>
-
-                            <p>Superlist is directory template built upon Bootstrap and SASS to bring great experience in creation of directory.</p>
+                            <h2>About EVOSE</h2>
+                            <p>EVOSE trying to solve your tidious job of searching school for your lil'ones. 
+                                Get all the details you need about a school here. 
+                            </p>
                         </div>
                         <!-- /.col-* -->
 
                         <div class="col-sm-4">
                             <h2>Contact Information</h2>
-
                             <p>
-                                Your Street 123, Melbourne, Australia
-                                <br> +1-123-456-789, <a href="#">sample@example.com</a>
+                                #150, 2nd floor, 8th Cross, 4th main dollars layout, BTM 2nd stage,
+                                Billekahalli, Bangalore - 560 076
+                                <br> +1-123-456-789, <a href="#">admin@evose.in</a>
                             </p>
                         </div>
                         <!-- /.col-* -->
@@ -183,16 +140,15 @@
             <div class="footer-bottom">
                 <div class="container">
                     <div class="footer-bottom-left">
-                        &copy; 2015 All rights reserved. Created by <a href="#">Aviators</a>.
+                        &copy; 2015 All rights reserved. Created by <a href="#">EVO</a>.
                     </div>
                     <!-- /.footer-bottom-left -->
 
                     <div class="footer-bottom-right">
                         <ul class="nav nav-pills">
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="pricing.html">Pricing</a></li>
                             <li><a href="terms-conditions.html">Terms &amp; Conditions</a></li>
-                            <li><a href="contact-1.html">Contact</a></li>
+                            <li><a href="contact-2.html">Contact</a></li>
                         </ul>
                         <!-- /.nav -->
                     </div>
