--- a/src/contact-2.html
+++ b/src/contact-2.html
@@ -16,7 +16,7 @@
 
     <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.png">
 
-    <title>Superlist - Contact v2</title>
+    <title>EVOSE - Contact</title>
 </head>
 
 
@@ -31,154 +31,26 @@
                 <div class="header-logo">
                     <a href="index.html">
                         <img src="assets/img/logo.png" alt="Logo">
-                        <span>Superlist</span>
+                        <span>EVOSE</span>
                     </a>
                 </div><!-- /.header-logo -->
 
-                <div class="header-content">
-                    <div class="header-top">
-                        <div class="header-search">
-                            <input type="text" class="form-control" placeholder="Search for...">
-                        </div><!-- /.header-search -->
+                <div class="header-content">                
 
-                        <ul class="header-nav-social social-links nav nav-pills">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                        </ul><!-- /.header-nav-social -->
-
-                        <ul class="header-nav-secondary nav nav-pills">
-                            <li><a href="login.html">Login</a></li>
-                            <li><a href="register.html">Register</a></li>
-                        </ul>
-                    </div><!-- /.header-top -->
-
-                    <div class="header-bottom">
-                        <div class="header-action">
-                            <a href="listing-submit.html" class="header-action-inner" title="Add Listing" data-toggle="tooltip" data-placement="bottom">
-                                <i class="fa fa-plus"></i>
-                            </a><!-- /.header-action-inner -->
-                        </div><!-- /.header-action -->
-
-                        <ul class="header-nav-primary nav nav-pills collapse navbar-collapse">
-    <li >
-        <a href="#">Home <i class="fa fa-chevron-down"></i></a>
-
-        <ul class="sub-menu">
-            <li><a href="index-video.html">Video v1</a></li>
-            <li><a href="index-video-transparent-header.html">Video v2</a></li>
-            <li><a href="index-google-map.html">Google Map V1</a></li>
-            <li><a href="index-google-map-transparent-header.html">Google Map v2</a></li>
-            <li><a href="index-image.html">Image v1</a></li>
-            <li><a href="index.html">Image v2</a></li>
-            <li><a href="index-bootstrap-slider.html">Boxed Slider</a></li>
-        </ul>
-    </li>
-
-    <li >
-        <a href="#">Listing <i class="fa fa-chevron-down"></i></a>
-
-        <ul class="sub-menu">
-            <li><a href="listing-detail.html">Detail</a></li>
-            <li><a href="listing-map.html">Row + Map</a></li>
-            <li><a href="listing-grid.html">Grid</a></li>
-            <li><a href="listing-grid-sidebar.html">Grid Sidebar</a></li>
-            <li><a href="listing-row.html">Row</a></li>
-            <li><a href="listing-row-sidebar.html">Row Sidebar</a></li>
-        </ul>
-    </li>
-
-    <li class="has-mega-menu ">
-        <a href="#">Pages <i class="fa fa-chevron-down"></i></a>
-
-        <ul class="mega-menu">
-            <li>
-                <a href="#">General</a>
-
-                <ul>
-                    <li><a href="faq.html">FAQ</a></li>
-                    <li><a href="invoice.html">Invoice</a></li>
-                    <li><a href="pricing.html">Pricing</a></li>
-                    <li><a href="grid.html">Grid System</a></li>
-                    <li><a href="testimonials.html">Testimonials</a></li>
-                </ul>
-            </li>
-
-            <li>
-                <a href="#">User Account</a>
-
-                <ul>
-                    <li><a href="user-profile-edit.html">Profile Edit</a></li>
-                    <li><a href="login.html">Login Form</a></li>
-                    <li><a href="register.html">Register Form</a></li>
-                    <li><a href="change-password.html">Change Password Form</a></li>
-                </ul>
-            </li>
-
-            <li>
-                <a href="#">Miscellaneous</a>
-
-                <ul>
-                    <li><a href="sticky-footer.html">Sticky Footer</a></li>
-                    <li><a href="terms-conditions.html">Terms &amp; Conditions</a></li>
-                    <li><a href="error-403.html">403 - Forbidden</a></li>
-                    <li><a href="error-404.html">404 - Not Found</a></li>
-                    <li><a href="error-500.html">500 - Internal Error</a></li>
-                </ul>
-            </li>
-
-            <li class="hidden-xs">
-                <div class="special">
-                    <a href="register.html">Sign Up Now</a>
-                </div><!-- /.special-->
-            </li>
-        </ul>
-    </li>
-
-    <li >
-        <a href="#">Blog <i class="fa fa-chevron-down"></i></a>
-
-        <ul class="sub-menu">
-            <li><a href="blog-standard-right-sidebar.html">Standard Right Sidebar</a></li>
-            <li><a href="blog-standard-left-sidebar.html">Standard Left Sidebar</a></li>
-            <li><a href="blog-boxed.html">Boxed Style</a></li>
-            <li><a href="blog-condensed.html">Condensed Style</a></li>
-            <li><a href="blog-detail.html">Detail Fullwidth</a></li>
-            <li><a href="blog-detail-right-sidebar.html">Detail Right Sidebar</a></li>
-            <li><a href="blog-detail-left-sidebar.html">Detail Left Sidebar</a></li>
-        </ul>
-    </li>
-
-    <li >
-        <a href="#">Admin <i class="fa fa-chevron-down"></i></a>
-
-        <ul class="sub-menu">
-            <li><a href="admin-dashboard.html">Dashboard</a></li>
-            <li><a href="admin-grid.html">Grid System</a></li>
-            <li><a href="admin-tables.html">Tables</a></li>
-            <li><a href="admin-forms.html">Forms</a></li>
-            <li><a href="admin-notifications.html">Notifications</a></li>
-        </ul>
-    </li>
-
-    <li class="active">
-        <a href="#">Contact <i class="fa fa-chevron-down"></i></a>
-        <ul class="sub-menu">
-            <li><a href="contact-1.html">Contact v1</a></li>
-            <li><a href="contact-2.html">Contact v2</a></li>
-            <li><a href="contact-3.html">Contact v3</a></li>
-        </ul>
-    </li>
-</ul>
-
-<button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".header-nav-primary">
-    <span class="sr-only">Toggle navigation</span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-</button>
-
-                    </div><!-- /.header-bottom -->
+                <div class="header-bottom">                                
+                                <!-- /.header-action -->
+                                <ul class="header-nav-primary nav nav-pills collapse navbar-collapse">
+                                    <li class="active">
+                                        <a href="index.html">Home</a>
+                                    </li>
+                                    <li>
+                                        <a href="error-404.html">Blog</a>                                        
+                                    </li>
+                                    <li>
+                                        <a href="contact-2.html">Contact</a>
+                                    </li>
+                                </ul>
+                            </div><!-- /.header-bottom -->
                 </div><!-- /.header-content -->
             </div><!-- /.header-inner -->
         </div><!-- /.container -->
@@ -191,21 +63,13 @@
     <div class="main">
         <div class="main-inner">
             <div class="container">
-                <div class="content">
-                    
-    <div class="document-title">
-        <h1>Contact v2</h1>
-
-        <ul class="breadcrumb">
-            <li><a href="#">Superlist</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </div><!-- /.document-title -->
-
-
-
+                <div class="content">    
                     <p>
-    Donec congue egestas nisi id varius. Curabitur ullamcorper consectetur risus, eget dapibus lacus. Maecenas sit amet dui dictum, tincidunt ante vel, semper purus. In hac habitasse platea dictumst. Vivamus hendrerit sem a rutrum ornare. Donec vehicula auctor eros. Etiam et enim tellus.
+                        Watching your toddler grow is such a fun !! But what about  finding a right school for them? You have to ask so many opinions from friends, colleagues, etc. Oops!!!... Wonder if you can do both watching your toddler play and searching school simultaneously. Yes, it's possible now and you are at the right place.
+                        <br><br>
+          EVOSE understands and aspires to make your search easier and more informative than you ever thought. All the schools in your neighborhood are listed here. You need not run to every school for their booklet and other info, it's right here, just a click away. 
+                        <br><br>Choose the school and  get the details you want and check the facilities your kid can avail. Moreover, visit school's picture gallery and watch the exclusive videos to get a hang about what they actually look like. That's not all, you will get the school Admission Forms  as well.
+          EVOSE will keep bringing more information from schools to your doorstep as we grow with you.
 </p>
 
 <div class="row">
@@ -215,8 +79,8 @@
                 <h3>Address</h3>
 
                 <p>
-                    13/2 Elizabeth Street,<br>
-                    Melbourne, Australia
+                    #150, 2nd floor, 8th Cross, 4th main dollars layout, BTM 2nd stage,
+                                Billekahalli, Bangalore - 560 076
                 </p>
             </div><!-- /.col-sm-4 -->
 
@@ -224,8 +88,8 @@
                 <h3>Contacts</h3>
 
                 <p>
-                    1900-CO-WORKER<br>
-                    1800-3322-4453
+                    1900-****-**11<br>
+                    1800-****-**53
                 </p>
             </div><!-- /.col-sm-4 -->
 
@@ -243,8 +107,9 @@
         </div><!-- /.row -->
 
         <div class="background-white p30 mt30">
-            <iframe src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Washington+D.C.+white+house&amp;aq=t&amp;sll=37.0625,-95.677068&amp;sspn=60.376022,92.460937&amp;ie=UTF8&amp;hq=Washington+D.C.+white+house&amp;t=m&amp;ll=38.896984,-77.036518&amp;spn=0.006295,0.006295&amp;output=embed" width="100%" height="350" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3889.0432065964615!2d77.60077411435311!3d12.90494331983022!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae151ea3a9a7cb%3A0xf04059d8fef299af!2s150%2C+8th+Cross+Rd%2C+Dollar+Layout%2C+Munivenkatppa+Layout%2C+BTM+2nd+Stage%2C+Bengaluru%2C+Karnataka+560076!5e0!3m2!1sen!2sin!4v1445157836602" width="100%" height="350" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
         </div>
+        
     </div>
 
     <div class="col-sm-4">
@@ -283,59 +148,70 @@
         </div><!-- /.main-inner -->
     </div><!-- /.main -->
 
-    <footer class="footer">
-    <div class="footer-top">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-4">
-                    <h2>About Superlist</h2>
+     <footer class="footer">
+            <div class="footer-top">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <h2>About EVOSE</h2>
+                            <p>EVOSE trying to solve your tidious job of searching school for your lil'ones. 
+                                Get all the details you need about a school here. 
+                            </p>
+                        </div>
+                        <!-- /.col-* -->
 
-                    <p>Superlist is directory template built upon Bootstrap and SASS to bring great experience in creation of directory.</p>
-                </div><!-- /.col-* -->
+                        <div class="col-sm-4">
+                            <h2>Contact Information</h2>
+                            <p>
+                                #150, 2nd floor, 8th Cross, 4th main dollars layout, BTM 2nd stage,
+                                Billekahalli, Bangalore - 560 076
+                                <br> +1-123-456-789, <a href="#">admin@evose.in</a>
+                            </p>
+                        </div>
+                        <!-- /.col-* -->
 
-                <div class="col-sm-4">
-                    <h2>Contact Information</h2>
+                        <div class="col-sm-4">
+                            <h2>Stay Connected</h2>
 
-                    <p>
-                        Your Street 123, Melbourne, Australia<br>
-                        +1-123-456-789, <a href="#">sample@example.com</a>
-                    </p>
-                </div><!-- /.col-* -->
+                            <ul class="social-links nav nav-pills">
+                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                <li><a href="#"><i class="fa fa-pinterest-p"></i></a></li>
+                            </ul>
+                            <!-- /.header-nav-social -->
+                        </div>
+                        <!-- /.col-* -->
+                    </div>
+                    <!-- /.row -->
+                </div>
+                <!-- /.container -->
+            </div>
+            <!-- /.footer-top -->
 
-                <div class="col-sm-4">
-                    <h2>Stay Connected</h2>
+            <div class="footer-bottom">
+                <div class="container">
+                    <div class="footer-bottom-left">
+                        &copy; 2015 All rights reserved. Created by <a href="#">EVO</a>.
+                    </div>
+                    <!-- /.footer-bottom-left -->
 
-                    <ul class="social-links nav nav-pills">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                        <li><a href="#"><i class="fa fa-pinterest-p"></i></a></li>
-                    </ul><!-- /.header-nav-social -->
-                </div><!-- /.col-* -->
-            </div><!-- /.row -->
-        </div><!-- /.container -->
-    </div><!-- /.footer-top -->
-
-    <div class="footer-bottom">
-        <div class="container">
-            <div class="footer-bottom-left">
-                &copy; 2015 All rights reserved. Created by <a href="#">Aviators</a>.
-            </div><!-- /.footer-bottom-left -->
-
-            <div class="footer-bottom-right">
-                <ul class="nav nav-pills">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="pricing.html">Pricing</a></li>
-                    <li><a href="terms-conditions.html">Terms &amp; Conditions</a></li>
-                    <li><a href="contact-1.html">Contact</a></li>
-                </ul><!-- /.nav -->
-            </div><!-- /.footer-bottom-right -->
-        </div><!-- /.container -->
-    </div>
-</footer><!-- /.footer -->
+                    <div class="footer-bottom-right">
+                        <ul class="nav nav-pills">
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="terms-conditions.html">Terms &amp; Conditions</a></li>
+                            <li><a href="contact-2.html">Contact</a></li>
+                        </ul>
+                        <!-- /.nav -->
+                    </div>
+                    <!-- /.footer-bottom-right -->
+                </div>
+                <!-- /.container -->
+            </div>
+        </footer><!-- /.footer -->
 
 </div><!-- /.page-wrapper -->
 
