search result page

--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
                                             <input type="text" class="form-control" placeholder="Enter area or school name...">
                                             <span class="input-group-btn">
                                                 <button class="btn btn-primary" 
-                                                        onclick="location.href = 'listing-row-sidebar.html';" 
+                                                        onclick="location.href = 'listing-grid-sidebar.html';" 
                                                         type="button">Search
                                                 </button>
                                             </span>
