location symbol and active class removal

--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,9 @@
                                     <li>
                                         <a href="contact-2.html">Contact</a>
                                     </li>
+                                    <li>
+                                        <a href="#"><span class="glyphicon glyphicon-map-marker"></span> Bengaluru</a>
+                                    </li>
                                 </ul>
                             </div>
                             <!-- /.header-bottom -->
