--- a/src/terms-conditions.html
+++ b/src/terms-conditions.html
@@ -40,7 +40,7 @@
                 <div class="header-bottom">                                
                                 <!-- /.header-action -->
                                 <ul class="header-nav-primary nav nav-pills collapse navbar-collapse">
-                                    <li class="active">
+                                    <li>
                                         <a href="index.html">Home</a>
                                     </li>
                                     <li>
@@ -48,6 +48,9 @@
                                     </li>
                                     <li>
                                         <a href="contact-2.html">Contact</a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><span class="glyphicon glyphicon-map-marker"></span> Bengaluru</a>
                                     </li>
                                 </ul>
                             </div><!-- /.header-bottom -->
