--- a/src/contact-2.html
+++ b/src/contact-2.html
@@ -40,14 +40,17 @@
                 <div class="header-bottom">                                
                                 <!-- /.header-action -->
                                 <ul class="header-nav-primary nav nav-pills collapse navbar-collapse">
-                                    <li class="active">
+                                    <li>
                                         <a href="index.html">Home</a>
                                     </li>
                                     <li>
                                         <a href="error-404.html">Blog</a>                                        
                                     </li>
-                                    <li>
+                                    <li class="active">
                                         <a href="contact-2.html">Contact</a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><span class="glyphicon glyphicon-map-marker"></span> Bengaluru</a>
                                     </li>
                                 </ul>
                             </div><!-- /.header-bottom -->
