--- a/src/error-404.html
+++ b/src/error-404.html
@@ -16,7 +16,7 @@
 
     <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.png">
 
-    <title>Superlist - 404 - Page Not Found</title>
+    <title>EVOSE - 404 - Page Not Found</title>
 </head>
 
 
@@ -40,7 +40,7 @@
                 <div class="header-bottom">                                
                                 <!-- /.header-action -->
                                 <ul class="header-nav-primary nav nav-pills collapse navbar-collapse">
-                                    <li class="active">
+                                    <li>
                                         <a href="index.html">Home</a>
                                     </li>
                                     <li>
@@ -48,6 +48,9 @@
                                     </li>
                                     <li>
                                         <a href="contact-2.html">Contact</a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><span class="glyphicon glyphicon-map-marker"></span> Bengaluru</a>
                                     </li>
                                 </ul>
                             </div><!-- /.header-bottom -->
